Add CC-BY-SA to SNI

--- a/data/blog/announcing-the-opensats-education-initiative.mdx
+++ b/data/blog/announcing-the-opensats-education-initiative.mdx
@@ -65,7 +65,7 @@ Bitcoin in its full historical, economic, and political context.
 
 Website: [nakamotoinstitute.org](https://nakamotoinstitute.org/)  
 Repository: [NakamotoInstitute/nakamotoinstitute.org](https://github.com/nakamotoinstitute/nakamotoinstitute.org)  
-License: AGPL-3.0
+License: AGPL-3.0 / Creative Commons (CC BY-SA 4.0)
 
 ### Mi Primer Bitcoin
 
