nit: apply edit from review
Co-authored-by: Abubakar Nur Khalil <Zero1729@protonmail.com>

--- a/data/blog/announcing-the-opensats-education-initiative.mdx
+++ b/data/blog/announcing-the-opensats-education-initiative.mdx
@@ -111,7 +111,7 @@ grants](/apply/grant) under the OpenSats Education Initiative. Together, we can
 create a more informed and empowered society. For more information and to apply,
 please visit [opensats.org/apply](http://opensats.org/apply).
 
-Thank you for your continued support, and we look forward to seeing the
+Thank you for your continued support. We look forward to seeing the
 incredible educational projects that will emerge from this initiative.
 
 All of the above grants are sourced from our [General Fund](/funds/general),
