--- a/data/authors/rob.mdx
+++ b/data/authors/rob.mdx
@@ -2,7 +2,7 @@
 name: Rob
 nym: BoltC
 avatar: /static/images/ops/rob.jpg
-occupation: Operations Manager
+occupation: Head of Operations
 company: OpenSats
 nostr: npub1n3w4uts2r4srq3adqu9trp953dflcnw7ppn72tad4htkpsckwcmqjef6um
 email: rob@opensats.org
