Volunteer -> Ops Assistant

--- a/data/authors/lucas.mdx
+++ b/data/authors/lucas.mdx
@@ -2,7 +2,7 @@
 name: Lucas
 nym: lucas
 avatar: /static/images/volunteers/lucas.jpg
-occupation: Volunteer
+occupation: Operations Assistant
 company: OpenSats
 email: lucas@opensats.org
 nostr: npub176mj8c5pa6pxlmm8syv4uhmz0n8934w0pfnfddgawhycqcue69esr3qzt2
