--- a/data/authors/arvin.mdx
+++ b/data/authors/arvin.mdx
@@ -2,12 +2,12 @@
 name: Arvin
 nym: arvin
 avatar: /static/images/volunteers/arvin.jpg
-occupation: Volunteer
+occupation: Operations Assistant
 company: OpenSats
 email: arvin@opensats.org
 nostr: npub18p66zmyh3q2rgejqencuz6dduuggdn7arg4eqn6x44jerxyy2mys670x7y
 github: https://github.com/Arvin21M
-volunteer: true
+ops: true
 ---
 
 Arvin's two-decade career in consumer credit, finance, and technology
