--- a/data/blog/nostr-grants-july-2024.mdx
+++ b/data/blog/nostr-grants-july-2024.mdx
@@ -82,85 +82,136 @@ security and reducing the risk of censorship. Future developments will include
 launching desktop and mobile clients, enabling community features, and
 translating the platform into multiple languages to broaden its global reach.
 
-Repository: [MostroP2P](https://github.com/MostroP2P)
-
+Repository: [MostroP2P](https://github.com/MostroP2P)  
 License: MIT
 
 ### nostter
 
-[Nostter](https://nostter.app/) is a social web client for nostr, focusing on enhancing the user interface and experience. It supports various NIPs, offers better collaboration with external apps, and aims to attract more users to the nostr network by improving SEO and adding features like embedded YouTube videos and local relay settings. Future plans include developing serverless scalable relays, creating additional products, and implementing features like automatic event backup and enhanced privacy measures to further enrich the platform's usability and appeal.
+[Nostter](https://nostter.app/) is a social web client for nostr, focusing on
+enhancing the user interface and experience. It supports various NIPs, offers
+better collaboration with external apps, and aims to attract more users to the
+nostr network by improving SEO and adding features like embedded YouTube videos
+and local relay settings. Future plans include developing serverless scalable
+relays, creating additional products, and implementing features like automatic
+event backup and enhanced privacy measures to further enrich the platform's
+usability and appeal.
 
-Repository: [SnowCait/nostter](https://github.com/SnowCait/nostter)
-
+Repository: [SnowCait/nostter](https://github.com/SnowCait/nostter)  
 License: AGPL-3.0
 
 ### nostr-filter-relay
 
-The nostr-filter-relay project provides a docker image package that filters nostr content based on criteria such as language, user type, and content safety. It aims to balance freedom of speech with user control over the content they see, thereby enhancing the overall user experience. The relay can detect and filter out NSFW content, hate speech, and more. Future enhancements will include sentiment analysis, topic classification, and [NIP-32](https://nostr-nips.com/nip-32) labeling compatibility to provide even more refined filtering options.
+The nostr-filter-relay project provides a docker image package that filters
+nostr content based on criteria such as language, user type, and content safety.
+It aims to balance freedom of speech with user control over the content they
+see, thereby enhancing the overall user experience. The relay can detect and
+filter out NSFW content, hate speech, and more. Future enhancements will include
+sentiment analysis, topic classification, and
+[NIP-32](https://nostr-nips.com/nip-32) labeling compatibility to provide even
+more refined filtering options.
 
-Repository: [atrifat/nostr-filter-relay](https://github.com/atrifat/nostr-filter-relay)
-
+Repository: [atrifat/nostr-filter-relay](https://github.com/atrifat/nostr-filter-relay)  
 License: MIT
 
 ### Citrine
 
-Citrine is an Android-based relay and database that enables nostr clients to send and receive events. It supports offline access to notes and provides a shared database for multiple nostr apps on a single device, improving reliability and performance for mobile users. Future updates will introduce configurable options and content provider support, further enhancing its integration and usability across different applications.
+Citrine is an Android-based relay and database that enables nostr clients to
+send and receive events. It supports offline access to notes and provides a
+shared database for multiple nostr apps on a single device, improving
+reliability and performance for mobile users. Future updates will introduce
+configurable options and content provider support, further enhancing its
+integration and usability across different applications.
 
-Repository: [greenart7c3/Citrine](https://github.com/greenart7c3/Citrine)
-
+Repository: [greenart7c3/Citrine](https://github.com/greenart7c3/Citrine)  
 License: MIT
 
 ### DVMDash
 
-[DVMDash](https://dvmdash.live/) is a monitoring and debugging tool for Data Vending Machines (DVMs) on nostr. It offers insights into DVM activity, such as transaction volumes and response times, helping developers and users optimize their interactions with AI tools and other computational services within the nostr ecosystem. Future plans include developing a graph-based visualization tool for DVM chains and enhancing the user interface to provide more detailed metrics and improve overall usability.
+[DVMDash](https://dvmdash.live/) is a monitoring and debugging tool for Data
+Vending Machines (DVMs) on nostr. It offers insights into DVM activity, such as
+transaction volumes and response times, helping developers and users optimize
+their interactions with AI tools and other computational services within the
+nostr ecosystem. Future plans include developing a graph-based visualization
+tool for DVM chains and enhancing the user interface to provide more detailed
+metrics and improve overall usability.
 
-Repository: [dtdannen/dvmdash](https://github.com/dtdannen/dvmdash)
-
+Repository: [dtdannen/dvmdash](https://github.com/dtdannen/dvmdash)  
 License: MIT
 
 ### nostr-php
 
-[Nostr-php](https://nostr-php.dev/) is a helper library for interacting with nostr. It aims to facilitate the integration of nostr functionalities into web applications, broadening the ecosystem's reach. This project will also support the development of contributed modules, enhancing platform versatility. Future efforts will focus on leveraging the helper library to enhance the capabilities of platforms like Drupal with nostr integration, promoting interoperability and functionality.
+[Nostr-php](https://nostr-php.dev/) is a helper library for interacting with
+nostr. It aims to facilitate the integration of nostr functionalities into web
+applications, broadening the ecosystem's reach. This project will also support
+the development of contributed modules, enhancing platform versatility. Future
+efforts will focus on leveraging the helper library to enhance the capabilities
+of platforms like Drupal with nostr integration, promoting interoperability and
+functionality.
 
-Repository: [nostrver-se/nostr-php](https://github.com/nostrver-se/nostr-php)
-
+Repository: [nostrver-se/nostr-php](https://github.com/nostrver-se/nostr-php)  
 License: MIT
 
 ### Shopstr
 
-[Shopstr](https://shopstr.store/) is a decentralized marketplace that enables users to buy and sell goods using Bitcoin anonymously. It aims to promote Bitcoin and nostr adoption by providing a free, open, and globally accessible platform for online commerce, eliminating middlemen and ensuring privacy. Future developments will include features such as a native wallet, a merchant metrics dashboard, an escrow system, and custom storefronts to enhance user experience and drive long-term project sustainability.
+[Shopstr](https://shopstr.store/) is a decentralized marketplace that enables
+users to buy and sell goods using Bitcoin anonymously. It aims to promote
+Bitcoin and nostr adoption by providing a free, open, and globally accessible
+platform for online commerce, eliminating middlemen and ensuring privacy. Future
+developments will include features such as a native wallet, a merchant metrics
+dashboard, an escrow system, and custom storefronts to enhance user experience
+and drive long-term project sustainability.
 
 Repository: [shopstr-eng/shopstr](https://github.com/shopstr-eng/shopstr)
-
 License: GPL-3.0
 
 ### npub.cash
 
-[npub.cash](https://npub.cash/) offers a privacy-preserving Lightning Address without registration by combining Cashu, nostr, and the Lightning Network. It leverages nostr identities for authentication, enhancing privacy and reducing custodial risks, making it easier for users to receive Zaps securely. Future developments will include integrating Cashu-Addresses with various environments, such as Umbrel and RaspiBlitz, Cashu wallets, and nostr clients, to broaden accessibility and functionality across the ecosystem.
+[npub.cash](https://npub.cash/) offers a privacy-preserving Lightning Address
+without registration by combining Cashu, nostr, and the Lightning Network. It
+leverages nostr identities for authentication, enhancing privacy and reducing
+custodial risks, making it easier for users to receive Zaps securely. Future
+developments will include integrating Cashu-Addresses with various environments,
+such as Umbrel and RaspiBlitz, Cashu wallets, and nostr clients, to broaden
+accessibility and functionality across the ecosystem.
 
-Repository: [cashubtc/npubcash-server](https://github.com/cashubtc/npubcash-server)
-
+Repository: [cashubtc/npubcash-server](https://github.com/cashubtc/npubcash-server)  
 License: MIT
 
 ### Nostrmo
 
-[Nostromo](https://github.com/haorendashu/nostrmo_faq/blob/main/README.md#nostrmo-faq) is a versatile nostr client supporting multiple platforms, including Android, iOS, MacOS, Windows, Web, and Linux. It offers features like NIP-07 support and a visual editor, ensuring a consistent and enhanced user experience across all devices. Future updates will focus on optimizing the Zap function, improving the Linux user experience, and refining the overall UI to further elevate the platform's usability and functionality.
+[Nostromo](https://github.com/haorendashu/nostrmo_faq/blob/main/README.md#nostrmo-faq)
+is a versatile nostr client supporting multiple platforms, including Android,
+iOS, MacOS, Windows, Web, and Linux. It offers features like NIP-07 support and
+a visual editor, ensuring a consistent and enhanced user experience across all
+devices. Future updates will focus on optimizing the Zap function, improving the
+Linux user experience, and refining the overall UI to further elevate the
+platform's usability and functionality.
 
-Repository: [haorendashu/nostrmo](https://github.com/haorendashu/nostrmo)
-
+Repository: [haorendashu/nostrmo](https://github.com/haorendashu/nostrmo)  
 License: GPL-3.0
 
 ### Captain’s Log
 
-Captain's Log is a nostr native desktop note-taking application for MacOS, Linux, and Windows. It supports Markdown for creating and posting [Event Kinds](https://github.com/nostr-protocol/nips?tab=readme-ov-file#event-kinds) 1 (short text notes) and 30023 (long-form articles). It also provides a familiar, cross-platform tool for content creation, integrated with [Keystache](https://github.com/Resolvr-io/Keystache) for key management, with an aim to drive nostr adoption​. Future updates will focus on a website for note sharing and zaps, enhancing the user interface, adding customization options, mobile device expansion, and improving the overall user experience.
+Captain's Log is a nostr native desktop note-taking application for MacOS,
+Linux, and Windows. It supports Markdown for creating and posting [Event
+Kinds](https://github.com/nostr-protocol/nips?tab=readme-ov-file#event-kinds) 1
+(short text notes) and 30023 (long-form articles). It also provides a familiar,
+cross-platform tool for content creation, integrated with
+[Keystache](https://github.com/Resolvr-io/Keystache) for key management, with an
+aim to drive nostr adoption​. Future updates will focus on a website for note
+sharing and zaps, enhancing the user interface, adding customization options,
+mobile device expansion, and improving the overall user experience.
 
-Repository: [nodetec/captains-log](https://github.com/nodetec/captains-log)
-
+Repository: [nodetec/captains-log](https://github.com/nodetec/captains-log)  
 License: MIT
 
-We are proud to support these projects and look forward to their contributions to the nostr ecosystem. We have more grants to announce soon and will provide funding for many more projects in the future.
+We are proud to support these projects and look forward to their contributions
+to the nostr ecosystem. We have more grants to announce soon and will provide
+funding for many more projects in the future.
 
-This is all made possible by donors like you. Please consider making a donation to [The Nostr Fund](/funds/nostr) to help us support the ingenious developers building toward a better future.
+This is all made possible by donors like you. Please consider making a donation
+to [The Nostr Fund](/funds/nostr) to help us support the ingenious developers
+building toward a better future.
 
 <center>
     <DonateToNostrFundButton/>
