--- a/data/blog/nostr-grants-july-2024.mdx
+++ b/data/blog/nostr-grants-july-2024.mdx
@@ -8,31 +8,15 @@ images: ['/static/images/blog/TODO.jpg']
 summary: "TODO"
 ---
 
-Announcing a fifth wave of nostr grants from OpenSats, aimed at driving
-innovation within the nostr ecosystem: these grants fuel technology projects
-that leverage the unique strengths of the nostr protocol, advancing its role as
-a leader in decentralized social communication.
+Announcing our fifth wave of nostr grants, aimed at driving innovation as well as consistent and broad support across the nostr ecosystem.
 
-Since [our last grant announcement](/blog/nostr-grants-december-2023) six months
-ago, nostr has seen incredible growth and progress. The community has
-strengthened the network's decentralization and resilience, bolstering its
-ability to resist censorship and enhance user autonomy.
+Since [our last wave of grants](https://opensats.org/blog/nostr-grants-december-2023), the protocol has seen continual growth and incredible progress. Nostr’s integration with the Lightning Network continues to make  [zaps](https://zaplife.lol/) (bitcoin-based micro transactions) a breeze. These frictionless payments create the perfect environment for economic activity and open up new income opportunities for independent journalists, artists, and creators in general. As Lightning & eCash mature and continue their path of [tightly integrating with nostr](https://njump.me/nevent1qqsqpzvlvmfyq9y8dp36x2xvgmad5486c4ct4ecdkmdxgtr9dxl5r2qzyrafsj7hmweg9ur7zmn6apajdg48hxuskujx53rhrux0ttjcqx84y20a3aa), and with the emergence of nostr-native P2P marketplaces, economic activity across the network is bound to grow.
 
-The protocol’s integration with the Bitcoin Lightning Network continues to make
-microtransactions via Zaps a breeze, creating an environment for economic
-activity, while opening up new income opportunities for independent journalists
-and artists. In addition, with the new [Mostr
-bridge](https://soapbox.pub/blog/mostr-fediverse-nostr-bridge/), nostr now
-connects with the Fediverse, enabling cross-communication with other social
-media platforms and broadening the scope of its decentralized applications.
+As an open protocol, it's in nostr's DNA to integrate with other open protocols. One such effort is the [Mostr bridge](https://mostr.pub/), which connects nostr with the wider Fediverse (and vice-versa). Gone are the days of walled gardens. May the best open protocol win! Or even better: let a thousand flowers bloom (and interop with each other).
 
-All of this showcases nostr's growing adoption and practical applications. From
-decentralized identity systems to communication frameworks, the potential uses
-for nostr are vast and ever-growing.
+It should be obvious  by now that nostr is way more than just a “twitter clone.” From self-sovereign identity to decentralized identity system & social graph, to web-of-trust and a base for secure communication frameworks, the potential uses for nostr are vast and ever-growing.
 
-These ten grants will empower developers to build on the existing momentum,
-ensuring nostr stays at the cutting edge of decentralized social media and
-secure communication.
+These ten grants will allow developers to build on the existing momentum, ensuring nostr stays at the cutting edge of permissionless social media, self-sovereign identity, and social payments of _real money_ online.
 
 - [nosvelte](#nosvelte)
 - [Mostro](#mostro)
@@ -46,10 +30,9 @@ secure communication.
 - [Nostrmo](#nostrmo)
 - [Captain’s Log](#captains-log)
 
-Including these ten projects, we have now issued a total of 56 nostr grants,
-sourced from our nostr fund. If you would like to help us continue supporting
-the nostr ecosystem, consider making a donation to [The Nostr
-Fund](/funds/nostr).
+Including these ten projects, we have now issued a total of 56 grants to various nostr projects. See our [1st](https://opensats.org/blog/nostr-grants-july-2023), [2nd](https://opensats.org/blog/bitcoin-and-nostr-grants-august-2023), [3rd](https://opensats.org/blog/nostr-grants-october-2023), and [4th wave](https://opensats.org/blog/nostr-grants-december-2023) blog posts for details. Additionally, we are providing long-term support for exceptional nostr developers such as [Pablo](https://opensats.org/blog/pablofz7-receives-lts-grant), [Stuart](https://opensats.org/blog/stuart-bowman-receives-lts-grant), [hzrd149](https://opensats.org/blog/hzrd149-receives-lts-grant), [Will](https://opensats.org/blog/jb55-receives-lts-grant), and [Yuki](https://opensats.org/blog/yuki-receives-lts-grant)—and we’ll have more grants to announce soon.
+
+If you would like to help us continue supporting the nostr ecosystem, consider making a donation to [The Nostr Fund](https://opensats.org/funds/nostr):
 
 <center>
     <DonateToNostrFundButton/>
@@ -60,27 +43,27 @@ Fund](/funds/nostr).
 ### nosvelte
 
 Nosvelte is a Svelte library designed to simplify the development of nostr
-applications. By offering pre-built components and tools, it reduces the
-complexity of creating nostr apps, making it accessible even for beginners. This
-project focuses on improving performance and ease of use, which can
-significantly boost the development of new applications within the nostr
-ecosystem. Future updates aim to enhance caching capabilities and maintain
-compatibility with the latest version of rx-nostr, ensuring long-term efficiency
-and adaptability for developers.
+applications. Offering pre-built components and tools, it reduces the complexity
+of creating nostr apps, making it accessible even for beginners. This project
+focuses on improving performance and ease of use, which can significantly boost
+the development of new applications within the nostr ecosystem. Future updates
+aim to enhance caching capabilities and maintain compatibility with the latest
+version of `rx-nostr`, ensuring long-term efficiency and adaptability for
+developers.
 
 Repository: [akiomik/nosvelte](https://github.com/akiomik/nosvelte)  
 License: Apache-2.0
 
 ### Mostro
 
-[Mostro](https://mostro.network/) is a peer-to-peer Bitcoin marketplace
-migrating from Telegram to nostr. As a large-scale update of the popular
-[@lnp2pBot](https://github.com/lnp2pBot) project, Mostro offers a non-KYC,
-censorship-resistant platform for Bitcoin trading, which is crucial for users
-living within authoritarian regions. The project aims to decentralize the
+[Mostro](https://mostro.network/) is a peer-to-peer Bitcoin marketplace that is
+currently migrating from Telegram to nostr. As a large-scale update of the
+popular [@lnp2pBot](https://github.com/lnp2pBot) project, Mostro offers a
+non-KYC, censorship-resistant platform for Bitcoin trading, which is crucial for
+users living within authoritarian regions. The project aims to decentralize the
 service further by allowing multiple
 [daemons](https://en.wikipedia.org/wiki/Daemon_(computing)) worldwide, enhancing
-security and reducing the risk of censorship. Future developments will include
+security, and reducing the risk of censorship. Future developments will include
 launching desktop and mobile clients, enabling community features, and
 translating the platform into multiple languages to broaden its global reach.
 
@@ -91,26 +74,25 @@ License: MIT
 
 [Nostter](https://nostter.app/) is a social web client for nostr, focusing on
 enhancing the user interface and experience. It supports various NIPs, offers
-better collaboration with external apps, and aims to attract more users to the
+tight integration with external apps, and aims to attract more users to the
 nostr network by improving SEO and adding features like embedded YouTube videos
 and local relay settings. Future plans include developing serverless scalable
-relays, creating additional products, and implementing features like automatic
-event backup and enhanced privacy measures to further enrich the platform's
-usability and appeal.
+relays and implementing features like automatic event backup and enhanced
+privacy measures to further enrich the platform's usability and appeal.
 
 Repository: [SnowCait/nostter](https://github.com/SnowCait/nostter)  
 License: AGPL-3.0
 
 ### nostr-filter-relay
 
-The nostr-filter-relay project provides a docker image package that filters
+The `nostr-filter-relay` project provides a docker image package that filters
 nostr content based on criteria such as language, user type, and content safety.
 It aims to balance freedom of speech with user control over the content they
 see, thereby enhancing the overall user experience. The relay can detect and
-filter out NSFW content, hate speech, and more. Future enhancements will include
-sentiment analysis, topic classification, and
-[NIP-32](https://nostr-nips.com/nip-32) labeling compatibility to provide even
-more refined filtering options.
+filter out NSFW content, as well as  certain categories of speech based on
+language, sentiment, and more. Future enhancements will include sentiment
+analysis, topic classification, and [NIP-32](https://nostr-nips.com/nip-32)
+labeling compatibility to provide even more refined filtering options.
 
 Repository: [atrifat/nostr-filter-relay](https://github.com/atrifat/nostr-filter-relay)  
 License: MIT
@@ -134,8 +116,8 @@ Vending Machines (DVMs) on nostr. It offers insights into DVM activity, such as
 transaction volumes and response times, helping developers and users optimize
 their interactions with AI tools and other computational services within the
 nostr ecosystem. Future plans include developing a graph-based visualization
-tool for DVM chains and enhancing the user interface to provide more detailed
-metrics and improve overall usability.
+tool for DVM chains, enhancing the user interface to provide more detailed
+metrics, and improving overall usability.
 
 Repository: [dtdannen/dvmdash](https://github.com/dtdannen/dvmdash)  
 License: MIT
@@ -158,10 +140,10 @@ License: MIT
 [Shopstr](https://shopstr.store/) is a decentralized marketplace that enables
 users to buy and sell goods using Bitcoin anonymously. It aims to promote
 Bitcoin and nostr adoption by providing a free, open, and globally accessible
-platform for online commerce, eliminating middlemen and ensuring privacy. Future
-developments will include features such as a native wallet, a merchant metrics
-dashboard, an escrow system, and custom storefronts to enhance user experience
-and drive long-term project sustainability.
+platform for online commerce, eliminating middlemen, and ensuring privacy.
+Future developments will include features such as a native wallet, a merchant
+metrics dashboard, an escrow system, and custom storefronts to enhance user
+experience and drive long-term project sustainability.
 
 Repository: [shopstr-eng/shopstr](https://github.com/shopstr-eng/shopstr)  
 License: GPL-3.0
@@ -172,9 +154,9 @@ License: GPL-3.0
 without registration by combining Cashu, nostr, and the Lightning Network. It
 leverages nostr identities for authentication, enhancing privacy and reducing
 custodial risks, making it easier for users to receive Zaps securely. Future
-developments will include integrating Cashu-Addresses with various environments,
-such as Umbrel and RaspiBlitz, Cashu wallets, and nostr clients, to broaden
-accessibility and functionality across the ecosystem.
+developments will include integrating Cashu-Addresses with various
+environments—such as Umbrel and RaspiBlitz, Cashu wallets, and nostr clients—to
+broaden accessibility and functionality across the ecosystem.
 
 Repository: [cashubtc/npubcash-server](https://github.com/cashubtc/npubcash-server)  
 License: MIT
@@ -194,15 +176,16 @@ License: GPL-3.0
 
 ### Captain’s Log
 
-Captain's Log is a nostr native desktop note-taking application for MacOS,
-Linux, and Windows. It supports Markdown for creating and posting [Event
-Kinds](https://github.com/nostr-protocol/nips?tab=readme-ov-file#event-kinds) 1
-(short text notes) and 30023 (long-form articles). It also provides a familiar,
-cross-platform tool for content creation, integrated with
-[Keystache](https://github.com/Resolvr-io/Keystache) for key management, with an
-aim to drive nostr adoption​. Future updates will focus on a website for note
-sharing and zaps, enhancing the user interface, adding customization options,
-mobile device expansion, and improving the overall user experience.
+Captain's Log is a nostr-native desktop note-taking application for MacOS,
+Linux, and Windows. It supports markdown for creating and posting ["kind
+1"](https://github.com/nostr-protocol/nips?tab=readme-ov-file#event-kinds)
+events (short text notes) and kind 30023 events (long-form articles). It also
+provides a familiar, cross-platform tool for content creation, and  integrates
+with [Keystache](https://github.com/Resolvr-io/Keystache) for key management,
+with the aim to drive nostr adoption for creators​. Future updates will focus on
+a website for note sharing and zaps, enhancing the user interface, adding
+customization options, mobile device expansion, and improving the overall user
+experience.
 
 Repository: [nodetec/captains-log](https://github.com/nodetec/captains-log)  
 License: MIT
@@ -211,11 +194,13 @@ License: MIT
 
 We are proud to support these projects and look forward to their contributions
 to the nostr ecosystem. We have more grants to announce soon and will provide
-funding for many more projects in the future.
+funding for many more projects in the future. If you're working on a nostr
+project that is free and open-source, [don't hesitate to
+apply](https://opensats.org/apply).
 
-This is all made possible by donors like you. Please consider making a donation
-to [The Nostr Fund](/funds/nostr) to help us support the ingenious developers
-building toward a better future.
+Our support for nostr is made possible by donors like you. Please consider
+making a donation to [The Nostr Fund](https://opensats.org/funds/nostr) to help
+us fund the ingenious developers building toward a better future:
 
 <center>
     <DonateToNostrFundButton/>
