--- a/data/blog/nostr-grants-july-2024.mdx
+++ b/data/blog/nostr-grants-july-2024.mdx
@@ -8,15 +8,33 @@ images: ['/static/images/blog/TODO.jpg']
 summary: "TODO"
 ---
 
-Announcing our fifth wave of nostr grants, aimed at driving innovation as well as consistent and broad support across the nostr ecosystem.
+Announcing our fifth wave of nostr grants, aimed at driving innovation as well
+as consistent and broad support across the nostr ecosystem.
 
-Since [our last wave of grants](/blog/nostr-grants-december-2023), the protocol has seen continual growth and incredible progress. Nostr’s integration with the Lightning Network continues to make  [zaps](https://zaplife.lol/) (bitcoin-based micro transactions) a breeze. These frictionless payments create the perfect environment for economic activity and open up new income opportunities for independent journalists, artists, and creators in general. As Lightning & eCash mature and continue their path of [tightly integrating with nostr](https://njump.me/nevent1qqsqpzvlvmfyq9y8dp36x2xvgmad5486c4ct4ecdkmdxgtr9dxl5r2qzyrafsj7hmweg9ur7zmn6apajdg48hxuskujx53rhrux0ttjcqx84y20a3aa), and with the emergence of nostr-native P2P marketplaces, economic activity across the network is bound to grow.
+Since [our last wave of grants](/blog/nostr-grants-december-2023), the protocol
+has seen continual growth and incredible progress. Nostr’s integration with the
+Lightning Network continues to make  [zaps](https://zaplife.lol/) (bitcoin-based
+micro transactions) a breeze. These frictionless payments create the perfect
+environment for economic activity and open up new income opportunities for
+independent journalists, artists, and creators in general. As Lightning & eCash
+mature and continue their path of [tightly integrating with nostr][nutsack], and
+with the emergence of nostr-native P2P marketplaces, economic activity across
+the network is bound to grow.
 
-As an open protocol, it's in nostr's DNA to integrate with other open protocols. One such effort is the [Mostr bridge](https://mostr.pub/), which connects nostr with the wider Fediverse (and vice-versa). Gone are the days of walled gardens. May the best open protocol win! Or even better: let a thousand flowers bloom (and interop with each other).
+As an open protocol, it's in nostr's DNA to integrate with other open protocols.
+One such effort is the [Mostr bridge](https://mostr.pub/), which connects nostr
+with the wider Fediverse (and vice-versa). Gone are the days of walled gardens.
+May the best open protocol win! Or even better: let a thousand flowers bloom
+(and interop with each other).
 
-It should be obvious  by now that nostr is way more than just a “twitter clone.” From self-sovereign identity to decentralized identity system & social graph, to web-of-trust and a base for secure communication frameworks, the potential uses for nostr are vast and ever-growing.
+It should be obvious  by now that nostr is way more than just a “twitter clone.”
+From self-sovereign identity to decentralized identity system & social graph, to
+web-of-trust and a base for secure communication frameworks, the potential uses
+for nostr are vast and ever-growing.
 
-These ten grants will allow developers to build on the existing momentum, ensuring nostr stays at the cutting edge of permissionless social media, self-sovereign identity, and social payments of _real money_ online.
+These ten grants will allow developers to build on the existing momentum,
+ensuring nostr stays at the cutting edge of permissionless social media,
+self-sovereign identity, and social payments of _real money_ online.
 
 - [nosvelte](#nosvelte)
 - [Mostro](#mostro)
@@ -30,9 +48,21 @@ These ten grants will allow developers to build on the existing momentum, ensuri
 - [Nostrmo](#nostrmo)
 - [Captain’s Log](#captains-log)
 
-Including these ten projects, we have now issued a total of 56 grants to various nostr projects. See our [1st](/blog/nostr-grants-july-2023), [2nd](/blog/bitcoin-and-nostr-grants-august-2023), [3rd](/blog/nostr-grants-october-2023), and [4th wave](/blog/nostr-grants-december-2023) blog posts for details. Additionally, we are providing long-term support for exceptional nostr developers such as [Pablo](/blog/pablofz7-receives-lts-grant), [Stuart](/blog/stuart-bowman-receives-lts-grant), [hzrd149](/blog/hzrd149-receives-lts-grant), [Will](/blog/jb55-receives-lts-grant), and [Yuki](/blog/yuki-receives-lts-grant)—and we’ll have more grants to announce soon.
+Including these ten projects, we have now issued a total of 56 grants to various
+nostr projects. See our [1st](/blog/nostr-grants-july-2023),
+[2nd](/blog/bitcoin-and-nostr-grants-august-2023),
+[3rd](/blog/nostr-grants-october-2023), and [4th
+wave](/blog/nostr-grants-december-2023) blog posts for details. Additionally, we
+are providing long-term support for exceptional nostr developers such as
+[Pablo](/blog/pablofz7-receives-lts-grant),
+[Stuart](/blog/stuart-bowman-receives-lts-grant),
+[hzrd149](/blog/hzrd149-receives-lts-grant),
+[Will](/blog/jb55-receives-lts-grant), and
+[Yuki](/blog/yuki-receives-lts-grant)—and we’ll have more grants to announce
+soon.
 
-If you would like to help us continue supporting the nostr ecosystem, consider making a donation to [The Nostr Fund](/funds/nostr):
+If you would like to help us continue supporting the nostr ecosystem, consider
+making a donation to [The Nostr Fund](/funds/nostr):
 
 <center>
     <DonateToNostrFundButton/>
@@ -205,3 +235,5 @@ us fund the ingenious developers building toward a better future:
 <center>
     <DonateToNostrFundButton/>
 </center>
+
+[nutsack]: https://njump.me/nevent1qqsqpzvlvmfyq9y8dp36x2xvgmad5486c4ct4ecdkmdxgtr9dxl5r2qzyrafsj7hmweg9ur7zmn6apajdg48hxuskujx53rhrux0ttjcqx84y20a3aa
