--- a/data/blog/nostr-grants-july-2024.mdx
+++ b/data/blog/nostr-grants-july-2024.mdx
@@ -1,11 +1,11 @@
 ---
 title: "Fifth Wave of Nostr Grants"
-date: '2024-07-11'
+date: '2024-07-15'
 tags: ['OpenSats', 'grants', 'nostr']
 draft: false
 authors: ['arvin', 'jason']
 images: ['/static/images/blog/TODO.jpg']
-summary: "TODO"
+summary: "OpenSats is funding ten more open-source projects in the nostr ecosystem."
 ---
 
 Announcing our fifth wave of nostr grants, aimed at driving innovation as well
