--- a/data/blog/nostr-grants-july-2024.mdx
+++ b/data/blog/nostr-grants-july-2024.mdx
@@ -12,14 +12,15 @@ Announcing our fifth wave of nostr grants, aimed at driving innovation as well
 as consistent and broad support across the nostr ecosystem.
 
 Since [our last wave of grants](/blog/nostr-grants-december-2023), the protocol
-has seen continual growth and incredible progress. Nostr’s integration with the
-Lightning Network continues to make  [zaps](https://zaplife.lol/) (bitcoin-based
-micro transactions) a breeze. These frictionless payments create the perfect
-environment for economic activity and open up new income opportunities for
-independent journalists, artists, and creators in general. As Lightning & eCash
-mature and continue their path of [tightly integrating with nostr][nutsack], and
-with the emergence of nostr-native P2P marketplaces, economic activity across
-the network is bound to grow.
+has seen [continual growth](https://stats.nostr.band/) and incredible progress.
+Nostr’s integration with the Lightning Network continues to make
+[zaps](https://zaplife.lol/) (bitcoin-based micro transactions) a breeze. These
+frictionless payments create the perfect environment for economic activity and
+open up new income opportunities for independent journalists, artists, and
+creators in general. As Lightning & eCash mature and continue their path of
+[tightly integrating with nostr][nutsack], and with the emergence of
+nostr-native P2P marketplaces, economic activity across the network is bound to
+grow.
 
 As an open protocol, it's in nostr's DNA to integrate with other open protocols.
 One such effort is the [Mostr bridge](https://mostr.pub/), which connects nostr
