--- a/data/blog/nostr-grants-july-2024.mdx
+++ b/data/blog/nostr-grants-july-2024.mdx
@@ -5,7 +5,7 @@ tags: ['OpenSats', 'grants', 'nostr']
 draft: false
 authors: ['arvin', 'jason']
 images: ['/static/images/blog/TODO.jpg']
-summary: "OpenSats is funding ten more open-source projects in the nostr ecosystem."
+summary: "OpenSats is funding eleven more open-source projects in the nostr ecosystem."
 ---
 
 Announcing our fifth wave of nostr grants, aimed at driving innovation as well
@@ -33,9 +33,10 @@ From self-sovereign identity to decentralized identity system & social graph, to
 web-of-trust and a base for secure communication frameworks, the potential uses
 for nostr are vast and ever-growing.
 
-These ten grants will allow developers to build on the existing momentum,
+The following grants will allow developers to build on the existing momentum,
 ensuring nostr stays at the cutting edge of permissionless social media,
-self-sovereign identity, and social payments of _real money_ online.
+self-sovereign identity, and social payments of _real money_ online. Without
+further ado, here they are:
 
 - [nosvelte](#nosvelte)
 - [npub.cash](#npubcash)
@@ -49,8 +50,8 @@ self-sovereign identity, and social payments of _real money_ online.
 - [Nostrmo](#nostrmo)
 - [Captain’s Log](#captains-log)
 
-Including these ten projects, we have now issued a total of 56 grants to various
-nostr projects. See our [1st](/blog/nostr-grants-july-2023),
+Including these eleven projects, we have now issued a total of 57 grants to
+various nostr projects. See our [1st](/blog/nostr-grants-july-2023),
 [2nd](/blog/bitcoin-and-nostr-grants-august-2023),
 [3rd](/blog/nostr-grants-october-2023), and [4th
 wave](/blog/nostr-grants-december-2023) blog posts for details. Additionally, we
