--- a/data/blog/nostr-grants-july-2024.mdx
+++ b/data/blog/nostr-grants-july-2024.mdx
@@ -33,10 +33,11 @@ From self-sovereign identity to decentralized identity system & social graph, to
 web-of-trust and a base for secure communication frameworks, the potential uses
 for nostr are vast and ever-growing.
 
-The following grants will allow developers to build on the existing momentum,
-ensuring nostr stays at the cutting edge of permissionless social media,
-self-sovereign identity, and social payments of _real money_ online. Without
-further ado, here they are:
+We hope that our grants will allow developers to build on the existing momentum,
+helping to ensure that nostr stays at the cutting edge of permissionless social
+media, self-sovereign identity, and social payments of _real_ money online.
+
+Without further ado, the 5th wave of grants are:
 
 - [nosvelte](#nosvelte)
 - [npub.cash](#npubcash)
