Add link to https://www.data-vending-machines.org/

--- a/data/blog/nostr-grants-july-2024.mdx
+++ b/data/blog/nostr-grants-july-2024.mdx
@@ -157,13 +157,14 @@ License: MIT
 
 ### DVMDash
 
-[DVMDash](https://dvmdash.live/) is a monitoring and debugging tool for Data
-Vending Machines (DVMs) on nostr. It offers insights into DVM activity, such as
-transaction volumes and response times, helping developers and users optimize
-their interactions with AI tools and other computational services within the
-nostr ecosystem. Future plans include developing a graph-based visualization
-tool for DVM chains, enhancing the user interface to provide more detailed
-metrics, and improving overall usability.
+[DVMDash](https://dvmdash.live/) is a monitoring and debugging tool for [Data
+Vending Machines](https://www.data-vending-machines.org/) (DVMs) on nostr. It
+offers insights into DVM activity, such as transaction volumes and response
+times, helping developers and users optimize their interactions with AI tools
+and other computational services within the nostr ecosystem. Future plans
+include developing a graph-based visualization tool for DVM chains, enhancing
+the user interface to provide more detailed metrics, and improving overall
+usability.
 
 Repository: [dtdannen/dvmdash](https://github.com/dtdannen/dvmdash)  
 License: MIT
