--- a/data/blog/nostr-grants-july-2024.mdx
+++ b/data/blog/nostr-grants-july-2024.mdx
@@ -37,7 +37,7 @@ We hope that our grants will allow developers to build on the existing momentum,
 helping to ensure that nostr stays at the cutting edge of permissionless social
 media, self-sovereign identity, and social payments of _real_ money online.
 
-Without further ado, the 5th wave of grants are:
+Without further ado, the 5th wave of nostr grants is going to:
 
 - [nosvelte](#nosvelte)
 - [npub.cash](#npubcash)
