--- a/data/blog/nostr-grants-july-2024.mdx
+++ b/data/blog/nostr-grants-july-2024.mdx
@@ -226,11 +226,10 @@ License: MIT
 
 ---
 
-We are proud to support these projects and look forward to their contributions
-to the nostr ecosystem. We have more grants to announce soon and will provide
-funding for many more projects in the future. If you're working on a nostr
-project that is free and open-source, [don't hesitate to
-apply](/apply).
+We are proud to support these projects and look forward to their continuous
+contributions to the nostr ecosystem. We have more grants to announce soon and
+will provide funding for many more projects in the future. If you're working on
+a nostr project that is free and open-source, [don't hesitate to apply](/apply).
 
 Our support for nostr is made possible by donors like you. Please consider
 making a donation to [The Nostr Fund](/funds/nostr) to help
