--- a/data/blog/hodlbod-receives-lts-grant.mdx
+++ b/data/blog/hodlbod-receives-lts-grant.mdx
@@ -8,9 +8,48 @@ images: ['/static/images/blog/TODO.jpg']
 summary: "OpenSats Welcomes Hodlbod as an LTS Grantee."
 ---
 
-TODO
+OpenSats is pleased to announce that Hodlbod has been granted long-term support
+for his ongoing contributions to advancing the nostr ecosystem.
+
+Hodlbod is the creator of [Coracle](https://coracle.social/), a web-based nostr
+client focused on improving relay selection, Web-of-Trust (WoT) based
+moderation, content recommendations, and privacy. It supports various NIPs to
+enable features like social threads, customizable feeds, Lightning Zaps, and
+multiple user accounts.
+
+He also created [Triflector](https://github.com/coracle-social/triflector), a
+nostr relay enforcing authentication via custom policies. Triflector supports
+access control methods like pubkey whitelisting, dynamic policy checks, relay
+claims, and group-based controls with
+[NIP-87](https://github.com/coracle-social/nips/blob/groups/87.md).
+
+In addition to his development efforts, Hodlbod co-hosts the podcasts “[Thank
+God for Nostr](https://podcastindex.org/podcast/6437926)" and "[Thank God for
+Bitcoin](https://podcastindex.org/podcast/6437929)," which delve into the worlds
+of nostr and Bitcoin, with notable developers and contributors as frequent
+guests.
+
+With this grant, Hodlbod plans to continue enhancements of Coracle and
+Triflector, while expanding his efforts across several key areas, including:
+
+- Utilizing DVMs within clients to enable more decentralization.
+- Researching ways to improve interoperability to advance nostr's growth.
+- Creating special-purpose nostr relays.
+- Developing and hosting services for [NIP-05](https://github.com/nostr-protocol/nips/blob/master/05.md), indexing, DVMs, relay-as-a-service, and client-as-a-service.
+
+"Building a decentralized social media client like Coracle is not just about
+technology, but about fostering genuine community interactions and ensuring user
+privacy" -Hodlbod
+
+Our mission at OpenSats is to provide sustainable funding for the builders and
+maintainers of critical open-source infrastructure within the Bitcoin and nostr
+ecosystem.
+
+Our [LTS program](/blog/nostr-lts-long-term-support-for-nostr-developers) is
+made possible by generous donors like you. To continue supporting important
+contributors like Hodlbod, consider making a donation to [The Nostr
+Fund](/funds/nostr).
 
 <center>
     <DonateToNostrFundButton/>
 </center>
-
