--- a/data/blog/hodlbod-receives-lts-grant.mdx
+++ b/data/blog/hodlbod-receives-lts-grant.mdx
@@ -37,9 +37,11 @@ Triflector, while expanding his efforts across several key areas, including:
 - Creating special-purpose nostr relays.
 - Developing and hosting services for [NIP-05](https://github.com/nostr-protocol/nips/blob/master/05.md), indexing, DVMs, relay-as-a-service, and client-as-a-service.
 
-"Building a decentralized social media client like Coracle is not just about
-technology, but about fostering genuine community interactions and ensuring user
-privacy" -Hodlbod
+> Building a decentralized social media client like Coracle is not just about
+> technology, but about fostering genuine community interactions and ensuring user
+> privacy.
+> 
+> <cite>—Hodlbod</cite>
 
 Our mission at OpenSats is to provide sustainable funding for the builders and
 maintainers of critical open-source infrastructure within the Bitcoin and nostr
