Edits from Hodlbod's feedback
Implemented change requests from Hodlbod based on his review of the draft.

--- a/data/blog/hodlbod-receives-lts-grant.mdx
+++ b/data/blog/hodlbod-receives-lts-grant.mdx
@@ -13,15 +13,12 @@ for his ongoing contributions to advancing the nostr ecosystem.
 
 Hodlbod is the creator of [Coracle](https://coracle.social/), a web-based nostr
 client focused on improving relay selection, Web-of-Trust (WoT) based
-moderation, content recommendations, and privacy. It supports various NIPs to
-enable features like social threads, customizable feeds, Lightning Zaps, and
-multiple user accounts.
+moderation, content recommendations, and privacy. Coracle has been the test bed 
+for several innovations to nostr, including private groups, new-style DMs, and custom feeds.
 
-He also created [Triflector](https://github.com/coracle-social/triflector), a
-nostr relay enforcing authentication via custom policies. Triflector supports
-access control methods like pubkey whitelisting, dynamic policy checks, relay
-claims, and group-based controls with
-[NIP-87](https://github.com/coracle-social/nips/blob/groups/87.md).
+He has also created a number of other projects, including [Triflector](https://github.com/coracle-social/triflector), a nostr relay enforcing 
+authentication via custom policies; [Welshman](https://github.com/coracle-social/welshman), a library providing functionality extracted from 
+Coracle; and [Keypub](https://keypub.coracle.social/), an experimental feed focused on people rather than notes.
 
 In addition to his development efforts, Hodlbod co-hosts the podcasts “[Thank
 God for Nostr](https://podcastindex.org/podcast/6437926)" and "[Thank God for
@@ -29,13 +26,12 @@ Bitcoin](https://podcastindex.org/podcast/6437929)," which delve into the worlds
 of nostr and Bitcoin, with notable developers and contributors as frequent
 guests.
 
-With this grant, Hodlbod plans to continue enhancements of Coracle and
-Triflector, while expanding his efforts across several key areas, including:
+With this grant, Hodlbod plans to continue development of Coracle and his experimentation, focusing on certain key areas:
 
-- Utilizing DVMs within clients to enable more decentralization.
+- Refining Coracle's user experience and releasing native versions.
+- Using DVMs and special purpose relays to support more use cases in a decentralized way.
 - Researching ways to improve interoperability to advance nostr's growth.
-- Creating special-purpose nostr relays.
-- Developing and hosting services for [NIP-05](https://github.com/nostr-protocol/nips/blob/master/05.md), indexing, DVMs, relay-as-a-service, and client-as-a-service.
+- Researching applications and implementations of web of trust to reduce spam, improve privacy, and recommend content.
 
 > Building a decentralized social media client like Coracle is not just about
 > technology, but about fostering genuine community interactions and ensuring user
