--- a/data/blog/hodlbod-receives-lts-grant.mdx
+++ b/data/blog/hodlbod-receives-lts-grant.mdx
@@ -3,7 +3,7 @@ title: "Long-Term Support For Hodlbod"
 date: '2024-07-18'
 tags: ['OpenSats', 'grants', 'nostr', 'LTS']
 draft: false
-authors: ['arvin', 'dergigi']
+authors: ['arvin', 'bayer']
 images: ['/static/images/blog/40-hodlbod.jpg']
 summary: "OpenSats Welcomes Hodlbod as an LTS Grantee."
 ---
