Removed reference as co-host for TGFB
Per Hodlbod, removed reference to being a co-host of Thank God For Bitcoin podcast.

--- a/data/blog/hodlbod-receives-lts-grant.mdx
+++ b/data/blog/hodlbod-receives-lts-grant.mdx
@@ -20,11 +20,9 @@ He has also created a number of other projects, including [Triflector](https://g
 authentication via custom policies; [Welshman](https://github.com/coracle-social/welshman), a library providing functionality extracted from 
 Coracle; and [Keypub](https://keypub.coracle.social/), an experimental feed focused on people rather than notes.
 
-In addition to his development efforts, Hodlbod co-hosts the podcasts “[Thank
-God for Nostr](https://podcastindex.org/podcast/6437926)" and "[Thank God for
-Bitcoin](https://podcastindex.org/podcast/6437929)," which delve into the worlds
-of nostr and Bitcoin, with notable developers and contributors as frequent
-guests.
+In addition to his development efforts, Hodlbod co-hosts the podcast “[Thank
+God for Nostr](https://podcastindex.org/podcast/6437926)," which delves into the world
+of nostr with notable developers and contributors as frequent guests.
 
 With this grant, Hodlbod plans to continue development of Coracle and his experimentation, focusing on certain key areas:
 
