--- a/data/blog/fiatjaf-recieves-lts-grant.mdx
+++ b/data/blog/fiatjaf-recieves-lts-grant.mdx
@@ -8,7 +8,38 @@ images: ['/static/images/blog/TODO.jpg']
 summary: "OpenSats Welcomes fiatjaf as an LTS Grantee."
 ---
 
-TODO
+OpenSats is proud to announce long-term support for fiatjaf, the innovative developer behind nostr.
+
+Before nostr, fiatjaf's primary focus was on decentralized financial systems and tools for the Bitcoin Lightning Network, 
+having contributed to projects like [lntxbot](https://github.com/fiatjaf/lntxbot), [c-lightning](https://github.com/ElementsProject/lightning/commits?author=fiatjaf), 
+[lnbits](https://github.com/lnbits/lnbits/commits?author=fiatjaf), and creating [LNURL tools](https://github.com/fiatjaf/go-lnurl), to name a few.
+
+When he is not writing inflammatory posts about how everybody is wrong, he spends his time tirelessly enhancing the [nostr](https://nostr.com/) ecosystem he pioneered.
+
+This LTS grant will enable fiatjaf to continue to improve the functionality and resilience of nostr through several ongoing projects, such as 
+[nostr-tools](https://github.com/nbd-wtf/nostr-tools), [nos2x](https://github.com/fiatjaf/nos2x), [go-nostr](https://github.com/nbd-wtf/go-nostr), 
+[khatru](https://github.com/fiatjaf/khatru), [eventstore](https://github.com/fiatjaf/eventstore), [njump](https://njump.me/about), [loure](https://github.com/fiatjaf/loure), 
+[wikistr](https://github.com/fiatjaf/wikistr), [patch34](https://github.com/fiatjaf/patch34), [nak](https://github.com/fiatjaf/nak), [gitstr](https://github.com/fiatjaf/gitstr), 
+[song](https://git.fiatjaf.com/song), [mmm](https://git.fiatjaf.com/mmm), and [promenade](https://git.fiatjaf.com/promenade). These tools and frameworks are essential for the 
+development of nostr clients, building custom relays, and enhancing the overall nostr infrastructure​.
+
+Additionally, fiatjaf will begin several new initiatives aimed at enhancing user experience, bolstering network resilience, and offering competitive alternatives to existing solutions. 
+These projects include:
+
+-   NIP29 GTK4 desktop client
+-   Custom relays using khatru and mmm
+-   A competing solution to [Ditto](https://ditto.pub/)
+
+"Nostr is the simplest open protocol that is able to create a censorship-resistant global "social" network once and for all." -- fiatjaf
+
+Our mission at OpenSats is to provide sustainable funding for those who work on the freedom tech of tomorrow. We believe that free and open-source software tools in general, and 
+Bitcoin and nostr in particular, are essential to the future of the internet and the world.
+
+LTS grants are awarded to individuals or projects making significant contributions to the open-source ecosystem within Bitcoin and nostr, and we are excited to extend our support 
+to such a remarkable and prolific developer.
+
+The [Long-Term Support program](/blog/nostr-lts-long-term-support-for-nostr-developers) is made possible by generous donors like you. To help us continue supporting important 
+open-source contributors like fiatjaf, consider making a donation to [The Nostr Fund](/funds/nostr).
 
 <center>
     <DonateToNostrFundButton/>
