Fix quote style

--- a/data/blog/fiatjaf-recieves-lts-grant.mdx
+++ b/data/blog/fiatjaf-recieves-lts-grant.mdx
@@ -30,7 +30,9 @@ These projects include:
 -   Custom relays using khatru and mmm
 -   A competing solution to [Ditto](https://ditto.pub/)
 
-"Nostr is the simplest open protocol that is able to create a censorship-resistant global "social" network once and for all." -- fiatjaf
+>Nostr is the simplest open protocol that is able to create a censorship-resistant global "social" network once and for all. 
+>
+><cite>-fiatjaf</cite>
 
 Our mission at OpenSats is to provide sustainable funding for those who work on the freedom tech of tomorrow. We believe that free and open-source software tools in general, and 
 Bitcoin and nostr in particular, are essential to the future of the internet and the world.
