--- a/data/blog/fiatjaf-recieves-lts-grant.mdx
+++ b/data/blog/fiatjaf-recieves-lts-grant.mdx
@@ -8,7 +8,7 @@ images: ['/static/images/blog/41-fiatjaf.jpg']
 summary: "OpenSats Welcomes fiatjaf as an LTS Grantee."
 ---
 
-OpenSats is proud to announce long-term support for fiatjaf, the innovative developer behind nostr.
+OpenSats is proud to announce long-term support for fiatjaf, the original brain behind nostr.
 
 Before nostr, fiatjaf's primary focus was on decentralized financial systems and tools for the Bitcoin Lightning Network, 
 having contributed to projects like [lntxbot](https://github.com/fiatjaf/lntxbot), [c-lightning](https://github.com/ElementsProject/lightning/commits?author=fiatjaf), 
