Adjust wording & punctuation
Co-authored-by: Gigi <109058+dergigi@users.noreply.github.com>

--- a/data/blog/fiatjaf-recieves-lts-grant.mdx
+++ b/data/blog/fiatjaf-recieves-lts-grant.mdx
@@ -10,7 +10,7 @@ summary: "OpenSats Welcomes fiatjaf as an LTS Grantee."
 
 OpenSats is proud to announce long-term support for fiatjaf, the original brain behind nostr.
 
-Before nostr, fiatjaf's primary focus was on decentralized financial systems and tools for the Bitcoin Lightning Network, 
+Before nostr, fiatjaf's primary focus was on decentralized financial systems and tools for Bitcoin's Lightning Network, 
 having contributed to projects like [lntxbot](https://github.com/fiatjaf/lntxbot), [c-lightning](https://github.com/ElementsProject/lightning/commits?author=fiatjaf), 
 [lnbits](https://github.com/lnbits/lnbits/commits?author=fiatjaf), and creating [LNURL tools](https://github.com/fiatjaf/go-lnurl), to name a few.
 
