--- a/data/blog/fiatjaf-recieves-lts-grant.mdx
+++ b/data/blog/fiatjaf-recieves-lts-grant.mdx
@@ -16,7 +16,7 @@ having contributed to projects like [lntxbot](https://github.com/fiatjaf/lntxbot
 
 When he is not writing inflammatory posts about how everybody is wrong, he spends his time tirelessly enhancing the [nostr](https://nostr.com/) ecosystem he pioneered.
 
-This LTS grant will enable fiatjaf to continue to improve the functionality and resilience of nostr through several ongoing projects, such as 
+This LTS grant will enable fiatjaf to focus all his time and attention on nostr and his many ongoing projects, such as 
 [nostr-tools](https://github.com/nbd-wtf/nostr-tools), [nos2x](https://github.com/fiatjaf/nos2x), [go-nostr](https://github.com/nbd-wtf/go-nostr), 
 [khatru](https://github.com/fiatjaf/khatru), [eventstore](https://github.com/fiatjaf/eventstore), [njump](https://njump.me/about), [loure](https://github.com/fiatjaf/loure), 
 [wikistr](https://github.com/fiatjaf/wikistr), [patch34](https://github.com/fiatjaf/patch34), [nak](https://github.com/fiatjaf/nak), [gitstr](https://github.com/fiatjaf/gitstr), 
