--- a/data/blog/fiatjaf-recieves-lts-grant.mdx
+++ b/data/blog/fiatjaf-recieves-lts-grant.mdx
@@ -20,7 +20,7 @@ This LTS grant will enable fiatjaf to focus all his time and attention on nostr 
 [nostr-tools](https://github.com/nbd-wtf/nostr-tools), [nos2x](https://github.com/fiatjaf/nos2x), [go-nostr](https://github.com/nbd-wtf/go-nostr), 
 [khatru](https://github.com/fiatjaf/khatru), [eventstore](https://github.com/fiatjaf/eventstore), [njump](https://njump.me/about), [loure](https://github.com/fiatjaf/loure), 
 [wikistr](https://github.com/fiatjaf/wikistr), [patch34](https://github.com/fiatjaf/patch34), [nak](https://github.com/fiatjaf/nak), [gitstr](https://github.com/fiatjaf/gitstr), 
-[song](https://git.fiatjaf.com/song), [mmm](https://git.fiatjaf.com/mmm), and [promenade](https://git.fiatjaf.com/promenade). These tools and frameworks are essential for the 
+[song](https://git.fiatjaf.com/song), [mmm](https://git.fiatjaf.com/mmm), and [promenade](https://git.fiatjaf.com/promenade). These tools and frameworks are aimed at improving the 
 development of nostr clients, building custom relays, and enhancing the overall nostr infrastructure​.
 
 Additionally, fiatjaf will begin several new initiatives aimed at enhancing user experience, bolstering network resilience, and offering competitive alternatives to existing solutions. 
