Remove https path for mission page
Co-authored-by: Gigi <109058+dergigi@users.noreply.github.com>

--- a/data/blog/bitcoin-grants-6th-wave.mdx
+++ b/data/blog/bitcoin-grants-6th-wave.mdx
@@ -139,7 +139,7 @@ License: MIT
 ---
 
 With this 6th wave of grants, much like our prior waves, we evaluated applications based on carefully defined [criteria](/apply#criteria) and did our best to select only the most impactful 
-and promising proposals for the Bitcoin ecosystem. If you are a developer working on a project that is aligned with [our mission](https://opensats.org/mission), don't hesitate to [apply for funding](/apply).
+and promising proposals for the Bitcoin ecosystem. If you are a developer working on a project that is aligned with [our mission](/mission), don't hesitate to [apply for funding](/apply).
 
 <center>
     <DonateToGeneralFundButton/>
