--- a/data/blog/bitcoin-grants-6th-wave.mdx
+++ b/data/blog/bitcoin-grants-6th-wave.mdx
@@ -22,7 +22,7 @@ In this latest round, we are proud to support eight remarkable projects that exe
 -   [Peer Storage Backups for Lightning Channels](#peer-storage-backups-for-lightning-channels)
 -   [Gonuts](#gonuts)
 
-Made possible by the generosity of our donors, these grants enable contributors and projects to continue their critical work and drive the future of Bitcoin forward. 
+Made possible by the generosity of our donors, these grants enable the various contributors to continue their critical work into the future.
 If you would like to support [our mission](/mission), then please consider donating:
 
 <center>
