--- a/data/blog/bitcoin-grants-6th-wave.mdx
+++ b/data/blog/bitcoin-grants-6th-wave.mdx
@@ -11,7 +11,7 @@ summary: "OpenSats is funding 8 more open-source projects in the bitcoin ecosyst
 We are excited to announce the sixth wave of Bitcoin grants, reaffirming our commitment to fostering innovation and development within the open-source community. 
 An important part of our mission is to provide essential funding to developers and projects that advance the Bitcoin ecosystem.
 
-In this latest round, we are proud to support eight remarkable projects that exemplify the spirit of open-source and technological advancement. In no particular order, these projects are:
+In this latest round, we are proud to support eight remarkable projects that exemplify the spirit of our mission. In no particular order, these projects are:
 
 -   [Bitcoin Jungle](#bitcoin-jungle)
 -   [secp256k1.swift](#secp256k1.swift)
